--- a/config.json
+++ b/config.json
@@ -16,14 +16,14 @@
     "enable": false,
     "ignoreCommand": []
   },
-  "adminBot": [],
+  "adminBot": [100001020756203],
   "whiteListMode": {
     "enable": false,
     "whiteListIds": [],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
   "nickNameBot": "DUFFER",
-  "prefix": "$",
+  "prefix": "+",
   "database": {
     "type": "sqlite",
     "uriMongodb": "",
